--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://arjunkrishnams.github.io/FoodOverflow",
+  "homepage": "http://arjunkrishnams.github.io/FoodOverflow",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +13,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
