--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://arjunkrishnams.github.io/FoodOverflow",
+  "homepage": "http://arjunkrishnams.github.io/FoodOverflow/#",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
